<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="50dp">


    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nome"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/DigiteNome"
        android:layout_marginTop="24sp"
        android:autofillHints=""
        android:inputType="text" />

    <TextView
        android:id="@+id/tvIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Idade"
        android:textSize="24sp"
        android:layout_marginTop="24sp"/>


    <EditText
        android:id="@+id/edtIdade"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/DigiteIdade"
        android:layout_marginTop="24sp"
        android:autofillHints=""
        android:inputType="text" />


    <Button
        android:id="@+id/btnEnviar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enviar"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="24sp"/>


</LinearLayout>